force-app/main/default/objects/Opportunity/fields/Active_Financial_Quote__c.field-meta.xml
<CustomField>
    <fullName>Active_Financial_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Active Financial Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Opportunities (Active Financial Quote)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>