force-app/main/default/objects/Opportunity/fields/Apparent_Low__c.field-meta.xml
<CustomField>
    <fullName>Apparent_Low__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Apparent Low (Account)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Apparent Low)</relationshipLabel>
    <relationshipName>Opportunitieswy95</relationshipName>
    <type>Lookup</type>
</CustomField>