force-app/main/default/objects/Opportunity/fields/Application_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Application_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>