force-app/main/default/objects/Opportunity/fields/Attached_All_Backup_Info_for_Special_Req__c.field-meta.xml
<CustomField>
    <fullName>Attached_All_Backup_Info_for_Special_Req__c</fullName>
    <description>Attached All Backup Info for Special Req?</description>
    <label>Attached All Backup Info for Special Req</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>