force-app/main/default/objects/Opportunity/fields/Attached_all_Email_Correspondence__c.field-meta.xml
<CustomField>
    <fullName>Attached_all_Email_Correspondence__c</fullName>
    <description>Attached all Email Correspondence?</description>
    <label>Attached all Email Correspondence?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>