force-app/main/default/objects/Opportunity/fields/Attached_Final_Scope_Letter__c.field-meta.xml
<CustomField>
    <fullName>Attached_Final_Scope_Letter__c</fullName>
    <description>Attached Final Scope Letter?</description>
    <label>Attached Final Scope Letter?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>