force-app/main/default/objects/Opportunity/fields/Attached_Pricing_Approval_Docs__c.field-meta.xml
<CustomField>
    <fullName>Attached_Pricing_Approval_Docs__c</fullName>
    <description>Attached Pricing Approval Docs?</description>
    <label>Attached Pricing Approval Docs?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>