force-app/main/default/objects/Opportunity/fields/Attention_to__c.field-meta.xml
<CustomField>
    <fullName>Attention_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who will we call attention to on the quote?</inlineHelpText>
    <label>Buyer (Contact)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Attention to)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>