force-app/main/default/objects/Opportunity/fields/B_R_BillingLine_Total__c.field-meta.xml
<CustomField>
    <fullName>B_R_BillingLine_Total__c</fullName>
    <description>From project financials tab INVOICED -(BUY/RESELL)
BUY/RESELL</description>
    <label>INVOICED-BUY/RESELL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>