force-app/main/default/objects/Opportunity/fields/Background_Checks__c.field-meta.xml
<CustomField>
    <fullName>Background_Checks__c</fullName>
    <inlineHelpText>Are background checks required for this job?</inlineHelpText>
    <label>Background Checks?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>