force-app/main/default/objects/Opportunity/fields/Bid_Contact__c.field-meta.xml
<CustomField>
    <fullName>Bid_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who is the contact person for this bid?</inlineHelpText>
    <label>Bid Contact (Contact)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Bid Contact)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>