force-app/main/default/objects/Opportunity/fields/Bid_Date__c.field-meta.xml
<CustomField>
    <fullName>Bid_Date__c</fullName>
    <defaultValue>DATETIMEVALUE(TEXT(TODAY())&amp;&apos; 2:00:00&apos;)</defaultValue>
    <inlineHelpText>When will you send your first firm bid?</inlineHelpText>
    <label>Bid Date</label>
    <type>DateTime</type>
</CustomField>