force-app/main/default/objects/Opportunity/fields/Bidders__c.field-meta.xml
<CustomField>
    <fullName>Bidders__c</fullName>
    <label>Bidders</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>