force-app/main/default/objects/Opportunity/fields/Bidders_Act__c.field-meta.xml
<CustomField>
    <fullName>Bidders_Act__c</fullName>
    <label>Bidders From Act</label>
    <type>TextArea</type>
</CustomField>