force-app/main/default/objects/Opportunity/fields/Bidders_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Bidders_Legacy__c</fullName>
    <label>Bidders (Legacy)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>