force-app/main/default/objects/Opportunity/fields/Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Billing_State__c</fullName>
    <formula>Attention_to__r.MailingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing State</label>
    <type>Text</type>
</CustomField>