force-app/main/default/objects/Opportunity/fields/Billings__c.field-meta.xml
<CustomField>
    <fullName>Billings__c</fullName>
    <description>The total Billing value made against this opportunity</description>
    <inlineHelpText>The total Billing value made against this opportunity</inlineHelpText>
    <label>Billings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>