force-app/main/default/objects/Opportunity/fields/BuyResellMarginBooked__c.field-meta.xml
<CustomField>
    <fullName>BuyResellMarginBooked__c</fullName>
    <description>From project financials tab MARGIN-(BUY/RESELL)
BUY/RESELL
And Even it is used for calculating (BuyResellMargin (Booked)) for Sales Result-DB</description>
    <formula>IF(ISBLANK(Active_Financial_Quote__r.Total_Buy_Resell_Margin__c) ,0 , Active_Financial_Quote__r.Total_Buy_Resell_Margin__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Active_Financial_Quote__r.Total_Buy_Resell_Margin__c</inlineHelpText>
    <label>MARGIN-BUY/RESELL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>