force-app/main/default/objects/Opportunity/fields/C_R_BillingLine_Total__c.field-meta.xml
<CustomField>
    <fullName>C_R_BillingLine_Total__c</fullName>
    <description>From project financials tab INVOICED -(COMMISSION/REBATE)
COMMISSION/REBATE</description>
    <label>INVOICED-COMMISSION/REBATE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>