force-app/main/default/objects/Opportunity/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <inlineHelpText>What carrier is shipping this order?</inlineHelpText>
    <label>Carrier</label>
    <length>40</length>
    <type>Text</type>
</CustomField>