force-app/main/default/objects/Opportunity/fields/City_material__c.field-meta.xml
<CustomField>
    <fullName>City_material__c</fullName>
    <label>City</label>
    <length>70</length>
    <type>Text</type>
</CustomField>