force-app/main/default/objects/Opportunity/fields/Closed_Won_date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_date__c</fullName>
    <description>The date this opportunity was changed to closed won.</description>
    <label>Closed Won Date</label>
    <type>Date</type>
</CustomField>