force-app/main/default/objects/Opportunity/fields/Company_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Company_Shipping__c</fullName>
    <inlineHelpText>Enter the company name that is the equipment is being shipped to.</inlineHelpText>
    <label>Company</label>
    <length>30</length>
    <type>Text</type>
</CustomField>