force-app/main/default/objects/Opportunity/fields/Confirmed_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Ship_Date__c</fullName>
    <inlineHelpText>What is the confirmed ship date on this order?</inlineHelpText>
    <label>Confirmed Ship Date</label>
    <type>Date</type>
</CustomField>