force-app/main/default/objects/Opportunity/fields/Consolidation__c.field-meta.xml
<CustomField>
    <fullName>Consolidation__c</fullName>
    <label>Consolidation Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>