force-app/main/default/objects/Opportunity/fields/Consolidation_City__c.field-meta.xml
<CustomField>
    <fullName>Consolidation_City__c</fullName>
    <label>Consolidation City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>