force-app/main/default/objects/Opportunity/fields/Consolidation_Country__c.field-meta.xml
<CustomField>
    <fullName>Consolidation_Country__c</fullName>
    <label>Consolidation Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>