force-app/main/default/objects/Opportunity/fields/Consolidation_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>Consolidation_PostalCode__c</fullName>
    <label>Consolidation PostalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>