force-app/main/default/objects/Opportunity/fields/Consolidation_State__c.field-meta.xml
<CustomField>
    <fullName>Consolidation_State__c</fullName>
    <label>Consolidation State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>