force-app/main/default/objects/Opportunity/fields/Consolidation_Street__c.field-meta.xml
<CustomField>
    <fullName>Consolidation_Street__c</fullName>
    <label>Consolidation Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>