force-app/main/default/objects/Opportunity/fields/Consulting_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a look up to account record to store the consulting engineer.</description>
    <inlineHelpText>Please select a consulting engineering firm for this opportunity.</inlineHelpText>
    <label>Consulting Engineer (Account)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Consulting Engineer)</relationshipLabel>
    <relationshipName>ConsultingEngineerOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>