force-app/main/default/objects/Opportunity/fields/Consulting_Engineer_Account__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Engineer_Account__c</fullName>
    <formula>HYPERLINK(IF(ISBLANK(Consulting_Engineer_Contact_Person__c), &apos;/&apos;+ Consulting_Engineer__c,  Consulting_Engineer_Contact_Person__r.AccountId),  IF(ISBLANK(Consulting_Engineer_Contact_Person__c), Consulting_Engineer__r.Name ,  Consulting_Engineer_Contact_Person__r.Account.Name), &quot;__blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consulting Engineer (Account)</label>
    <type>Text</type>
</CustomField>