force-app/main/default/objects/Opportunity/fields/Consulting_Engineer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Engineer_Contact__c</fullName>
    <inlineHelpText>Who is the Consulting Engineer on this opportunity?</inlineHelpText>
    <label>Consulting Engineer Contact Person</label>
    <length>40</length>
    <type>Text</type>
</CustomField>