force-app/main/default/objects/Opportunity/fields/Consulting_Engineer_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Engineer_Contact_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consulting Engineer (Contact)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Consulting Engineer Contact Person)</relationshipLabel>
    <relationshipName>Opportunities79sk</relationshipName>
    <type>Lookup</type>
</CustomField>