force-app/main/default/objects/Opportunity/fields/Crane_Equipment_del__c.field-meta.xml
<CustomField>
    <fullName>Crane_Equipment_del__c</fullName>
    <label>Crane/Equipment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>