force-app/main/default/objects/Opportunity/fields/Credit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Credit_Notes__c</fullName>
    <label>Accounting Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>