force-app/main/default/objects/Opportunity/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <inlineHelpText>What is the estimated delivery date for the shipment?</inlineHelpText>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>