force-app/main/default/objects/Opportunity/fields/Destination_City__c.field-meta.xml
<CustomField>
    <fullName>Destination_City__c</fullName>
    <label>Destination City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>