force-app/main/default/objects/Opportunity/fields/Destination_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>Destination_PostalCode__c</fullName>
    <label>Destination PostalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>