force-app/main/default/objects/Opportunity/fields/Destination_Street__c.field-meta.xml
<CustomField>
    <fullName>Destination_Street__c</fullName>
    <label>Destination Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>