force-app/main/default/objects/Opportunity/fields/DirectCommisionMarginBooked__c.field-meta.xml
<CustomField>
    <fullName>DirectCommisionMarginBooked__c</fullName>
    <description>From project financials tab MARGIN-(COMMISSION/REBATE)
COMMISSION/REBATE
And Even it is used for calculating (Direct/Commission Margin (Booked) ) for Sales Result-DB</description>
    <formula>IF(ISBLANK( Active_Financial_Quote__r.Commissions_and_Rebates__c ) ,0 , Active_Financial_Quote__r.Commissions_and_Rebates__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Active_Financial_Quote__r.Commissions_and_Rebates__c</inlineHelpText>
    <label>MARGIN-COMMISSION/REBATE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>