force-app/main/default/objects/Opportunity/fields/Disposal_Dumpster__c.field-meta.xml
<CustomField>
    <fullName>Disposal_Dumpster__c</fullName>
    <label>Disposal/Dumpster</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>