force-app/main/default/objects/Opportunity/fields/Do_they_need_install_labor__c.field-meta.xml
<CustomField>
    <fullName>Do_they_need_install_labor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if they need labor to install the part(s)</inlineHelpText>
    <label>Do they need install labor?</label>
    <type>Checkbox</type>
</CustomField>