force-app/main/default/objects/Opportunity/fields/Does_Customer_PO_Reflect_Notes__c.field-meta.xml
<CustomField>
    <fullName>Does_Customer_PO_Reflect_Notes__c</fullName>
    <description>Does Customer PO Reflect Negotiated Scope?</description>
    <label>Does Customer PO Reflect Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>