force-app/main/default/objects/Opportunity/fields/Drug_Test__c.field-meta.xml
<CustomField>
    <fullName>Drug_Test__c</fullName>
    <inlineHelpText>Are drug test required for workers for this job?</inlineHelpText>
    <label>Drug Test?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>