force-app/main/default/objects/Opportunity/fields/End_User__c.field-meta.xml
<CustomField>
    <fullName>End_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a look up to account record to store end user.</description>
    <inlineHelpText>Please select an end user for this opportunity.</inlineHelpText>
    <label>End User Business Name (Account)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>EndUserOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>