force-app/main/default/objects/Opportunity/fields/End_User_Business_Name_Account__c.field-meta.xml
<CustomField>
    <fullName>End_User_Business_Name_Account__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;+ End_User_Contact_Name__r.AccountId ,  End_User_Contact_Name__r.Account.Name,&quot;__blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End User Business Name (Account)</label>
    <type>Text</type>
</CustomField>