force-app/main/default/objects/Opportunity/fields/End_User_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>End_User_Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who is the person that will be operating and looking after the equipment after the job is complete?</inlineHelpText>
    <label>End User Contact Name (Contact)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>