force-app/main/default/objects/Opportunity/fields/Equipment_Model__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Model__c</fullName>
    <inlineHelpText>What is the model number of the equipment you are quoting parts for?</inlineHelpText>
    <label>Equipment Model</label>
    <length>50</length>
    <type>Text</type>
</CustomField>