force-app/main/default/objects/Opportunity/fields/Equipment_Serial_Number_2__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Serial_Number_2__c</fullName>
    <inlineHelpText>Enter 2nd equipment serial number if required</inlineHelpText>
    <label>Equipment Serial Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>