force-app/main/default/objects/Opportunity/fields/Equipment_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Serial_Number__c</fullName>
    <inlineHelpText>What is the serial number of the equipment this part(s) is for.</inlineHelpText>
    <label>Equipment Serial Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>