force-app/main/default/objects/Opportunity/fields/Estimated_Labor__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Labor__c</fullName>
    <inlineHelpText>What is the estimated labor total in dollars?</inlineHelpText>
    <label>Estimated Labor $</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>