force-app/main/default/objects/Opportunity/fields/Final_Review_Before_Release__c.field-meta.xml
<CustomField>
    <fullName>Final_Review_Before_Release__c</fullName>
    <description>Final Review Before Release?</description>
    <label>Final Review Before Release?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>