force-app/main/default/objects/Opportunity/fields/Force_Create_Sharepoint_Folder__c.field-meta.xml
<CustomField>
    <fullName>Force_Create_Sharepoint_Folder__c</fullName>
    <formula>HYPERLINK(&quot;/apex/SharePoint_Intermidiate?id=&quot;+Id+&quot;&amp;type=createFolder&quot;, IMAGE(&quot;/resource/Button_ForceCreate_Sharepoint_Folder&quot;, &quot;Force Create Sharepoint Folder&quot;),&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Force Create Sharepoint Folder</label>
    <type>Text</type>
</CustomField>