force-app/main/default/objects/Opportunity/fields/Fork__c.field-meta.xml
<CustomField>
    <fullName>Fork__c</fullName>
    <inlineHelpText>Is a forklift needed for this job?</inlineHelpText>
    <label>Forklift</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>