force-app/main/default/objects/Opportunity/fields/Freight__c.field-meta.xml
<CustomField>
    <fullName>Freight__c</fullName>
    <inlineHelpText>What freight option will this order be using?</inlineHelpText>
    <label>Freight</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PPA</fullName>
            </value>
            <value>
                <fullName>Collect</fullName>
            </value>
            <value>
                <fullName>FFA</fullName>
            </value>
            <value>
                <fullName>3rd-Party Logistics</fullName>
            </value>
            <value>
                <fullName>Customer Pick Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>